--- a/public/assets/templates/correo.html
+++ b/public/assets/templates/correo.html
@@ -8,13 +8,47 @@
 	<title>Green Thinking - Correo recuperación</title>
 </head>
 
-<body style="padding: 2rem 1rem; margin: 0; background-color: #EAEFFC;">
+<body style="padding: 0; margin: 0; background-color: #EAEFFC;">
+
+    <div style="font-family: sans-serif; color:#000; text-align: left; padding: 1rem; max-width: 600px; height: auto; margin: 0 auto; background-color: #fff;">
+        <div style="padding: 20px; border: 1px solid #DBDBDB; border-radius: 12px;">
+            <div style="display: flex; margin-bottom: 40px;">
+                <img src="../img/favicon.png" alt="LOGO" style="width: 2.9rem;">
+                <h1 style="margin: auto -5px; font-size: 1.2rem; line-height: 1;">
+                    <p style="margin: 0 5px;">GREEN</p>
+                    <p style="margin: 0;">THINKING</p>
+                </h1>
+            </div>
+            <h2>Restablecer contrase&ntilde;a</h2>
+            <p style="margin-bottom: 25px;">
+                Estimado/a&nbsp;<b>@USUARIO</b>:
+            </p>
+            <p style="margin-bottom: 25px;">
+                Se solicit&oacute; un restablecimiento de contrase&ntilde;a para tu cuenta, haz clic en el bot&oacute;n
+                que aparece a continuaci&oacute;n para cambiar tu contrase&ntilde;a.
+            </p>
+            <a style="padding: 12px; border-radius: 12px; background-color: #3ca230; color: #fff;
+                text-decoration: none; font-weight: bold;" href="@LINK" target="_blank">
+                Cambiar contrase&ntilde;a
+            </a>
+            <p style="margin-top: 25px;">Gracias.</p>
+        </div>
+    </div>
+
+</body>
+
+<!-- <body style="padding: 2rem 1rem; margin: 0; background-color: #EAEFFC;"></body>
 
     <div style="font-family: sans-serif; color:#000; text-align: center; max-width: 600px; height: auto; margin: 0 auto;">
-        <!-- <h1>Green Thinking</h1> -->
         <div style="text-align: left; padding: 1rem; /*width: 600px;*/ background-color: #fff; border-radius: 12px;">
-            <div style="padding: 20px; border: 1px solid #DBDBDB; border-radius: 12px; font-family: Sans-serif;">
-                <img src="../img/logoGT.jpeg" alt="LOGO" style="width: 125px;">
+            <div style="padding: 20px; border: 1px solid #DBDBDB; border-radius: 12px;">
+                <div style="display: flex; margin-bottom: 40px;">
+                    <img src="../img/favicon.png" alt="LOGO" style="width: 2.9rem;">
+                    <h1 style="margin: auto -5px; font-size: 1.2rem; line-height: 1;">
+                        <p style="margin: 0 5px;">GREEN</p>
+                        <p style="margin: 0;">THINKING</p>
+                    </h1>
+                </div>
                 <h2>Restablecer contrase&ntilde;a</h2>
                 <p style="margin-bottom: 25px;">
                     Estimado/a&nbsp;<b>@USUARIO</b>:
@@ -32,6 +66,6 @@
         </div>
     </div>
 
-</body>
+</body> -->
 
 </html>
