--- a/public/assets/templates/correo.html
+++ b/public/assets/templates/correo.html
@@ -8,7 +8,7 @@
 	<title>Green Thinking - Correo recuperación</title>
 </head>
 
-<body style="padding: 0; margin: 0; background-color: #EAEFFC;">
+<body style="padding: 0; margin: 0; background-color: #fff;">
 
     <div style="font-family: sans-serif; color:#000; text-align: left; padding: 1rem; max-width: 600px; height: auto; margin: 0 auto; background-color: #fff;">
         <div style="padding: 20px; border: 1px solid #DBDBDB; border-radius: 12px;">
