--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -48,22 +48,36 @@ form {
     width: 360px;
 }
 
+.form-forgot {
+    width: 450px;
+    padding: 1rem;
+}
+
 .login-content img {
     height: 100px;
 }
 
 .login-content h2 {
-    margin: 15px 0;
+    margin: 15px 0 30px 0;
     color: #333;
     text-transform: uppercase;
     font-size: 2.9rem;
+}
+
+.login-content .forgot-title {
+    margin: auto;
+    padding: 20px 0;
+    color: #000;
+    text-transform: none;
+    font-size: 1.9rem;
+    text-align: center;
 }
 
 .login-content .input-div {
     position: relative;
     display: grid;
     grid-template-columns: 7% 93%;
-    margin: 25px 0;
+    margin: 35px 0;
     padding: 5px 0;
     border-bottom: 2px solid #d9d9d9;
 }
@@ -141,13 +155,13 @@ form {
     outline: none;
     background: none;
     padding: 0.5rem 0.7rem;
-    font-size: 1.2rem;
+    font-size: 1rem;
     color: #555;
     font-family: 'poppins', sans-serif;
 }
 
 .input-div.pass {
-    margin-bottom: 4px;
+    margin-bottom: 15px;
 }
 
 a {
@@ -173,10 +187,11 @@ a:hover {
     background-image: linear-gradient(to right, #32be8f, #38d39f, #32be8f);
     background-image: linear-gradient(to right, #33882a, #3ca230, #33882a);
     background-size: 200%;
-    font-size: 1.2rem;
+    font-size: 1rem;
     color: #fff;
     font-family: 'Poppins', sans-serif;
     text-transform: uppercase;
+    letter-spacing: 1px;
     margin: 1rem 0;
     cursor: pointer;
     transition: .5s;
@@ -194,9 +209,13 @@ label[class="error"] {
     /* left: -43px; */
 }
 
+.input-div.one.error,
+.input-div.pass.error {
+    margin-bottom: 60px;
+}
+
 .input-div.error {
-    transition: .4s;
-    margin: 45px 0;
+    margin-bottom: 45px;
 }
 
 /* Cambiar a rojo cuando el padre del input (input-div) tiene un error */
@@ -214,9 +233,15 @@ label[class="error"] {
     }
 }
 
+@media screen and (max-width: 1125px) {
+    .form-forgot {
+        width: 360px
+    }
+}
+
 @media screen and (max-width: 1000px) {
     form {
-        width: 290px;
+        width: 275px;
     }
     .login-content h2 {
         font-size: 2.4rem;
@@ -226,6 +251,7 @@ label[class="error"] {
         width: 400px;
     }
 }
+
 
 @media screen and (max-width: 900px) {
     .container {
@@ -239,6 +265,27 @@ label[class="error"] {
     }
     .login-content {
         justify-content: center;
+    }
+    form {
+        width: 360px;
+    }
+    .form-forgot {
+        width: 450px
+    }
+}
+
+@media screen and (max-width: 568px) {
+    .form-forgot {
+        width: 360px
+    }
+}
+
+@media screen and (max-width: 425px) {
+    form {
+        width: 230px;
+    }
+    .form-forgot {
+        width: 247px
     }
 }
 
@@ -261,11 +308,20 @@ label[class="error"] {
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
+.form-content .forgot-title {
+    margin: auto;
+    padding: 20px 0;
+    color: #000;
+    text-transform: none;
+    font-size: 1.9rem;
+    text-align: center;
+}
+
 .form-content .input-div {
     position: relative;
     display: grid;
     grid-template-columns: 7% 93%;
-    margin: 25px 0;
+    margin: 35px 0;
     padding: 5px 0;
     border-bottom: 2px solid #d9d9d9;
 }
