Mejoras del login

--- a/public/assets/templates/correo.html
+++ b/public/assets/templates/correo.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Green Thinking - Correo recuperación</title>
+	<title>Green Thinking - Correo Recuperación</title>
 </head>
 
 <body style="padding: 0; margin: 0; background-color: #fff;">
@@ -24,14 +24,25 @@
                 Estimado/a&nbsp;<b>@USUARIO</b>:
             </p>
             <p style="margin-bottom: 25px;">
-                Se solicit&oacute; un restablecimiento de contrase&ntilde;a para tu cuenta, haz clic en el bot&oacute;n
-                que aparece a continuaci&oacute;n para cambiar tu contrase&ntilde;a.
+                Se solicit&oacute; un restablecimiento de contrase&ntilde;a para tu cuenta. Si no solicitaste este cambio, por favor ignora este correo.
+            </p>
+            <p style="margin-bottom: 25px;">
+                Para restablecer tu contrase&ntilde;a, haz clic en el siguiente bot&oacute;n:
             </p>
             <a style="padding: 12px; border-radius: 12px; background-color: #3ca230; color: #fff;
                 text-decoration: none; font-weight: bold;" href="@LINK" target="_blank">
                 Cambiar contrase&ntilde;a
             </a>
-            <p style="margin-top: 25px;">Gracias.</p>
+            <p style="margin-top: 25px;">
+                El enlace del bot&oacute;n expirar&aacute; en 1 d&iacute;a. Si el enlace del bot&oacute;n ha expirado o ha sido utilizado, deber&aacute;s solicitar un nuevo enlace para restablecer tu contraseña.
+            </p>
+            <p style="margin-top: 25px;">
+                Si tienes alg&uacute;n problema con el bot&oacute;n o necesitas asistencia adicional, por favor contacta con nuestro equipo de soporte.
+            </p>
+            <p style="margin-top: 25px;">Gracias,</p>
+            <p style="margin-top: 25px;">
+                El equipo de Green Thinking SV
+            </p>
         </div>
     </div>
 
