--- a/public/assets/templates/prueba.html
+++ b/public/assets/templates/prueba.html
@@ -31,11 +31,9 @@
         /*display: flex; justify-content: center;*/">
 
         <div style="position: relative; width: 100%;">
-
-            <img src="../img/pruebacorreos/imagen.png" alt="" style="display: block; width: 100%; max-width: 598.4px; margin: auto;">
-            <img src="../img/pruebacorreos/Horizontal Vector.png" alt="" style="position: absolute; top: 0; margin-top: 17%; width: 25%;">
-            <img src="../img/pruebacorreos/Vertical Vector.png" alt="" style="position: absolute; top: 0; right: 0; height: 30%; margin: 13% 18% 0 0;">
-            
+            <img src="@IMG_1" alt="" style="display: block; width: 100%; max-width: 598.4px; margin: auto;">
+            <img src="@IMG_2" alt="" style="position: absolute; top: 0; margin-top: 17%; width: 25%;">
+            <img src="@IMG_3" alt="" style="position: absolute; top: 0; right: 0; height: 30%; margin: 13% 18% 0 0;">
         </div>
 
         <div style="display: grid; padding: 0 60px 60px;">
@@ -52,7 +50,7 @@
                 “Introducción a Protocolos de Red”
             </h3>
 
-            <img src="../img/pruebacorreos/Group 8.png" alt="" style="display: block; width: 23.22px; margin: auto;">
+            <img src="@IMG_4" alt="" style="display: block; width: 23.22px; margin: auto;">
                 
             <a href="#" style="margin: auto; color: #2B58C6;">https://bit.ly/3AXkZPe</a>
 
@@ -83,7 +81,7 @@
                 ¿Necesitas más ayuda para acceder al sitio de la academia HUAWEI? ¡Tenemos un video tutorial para ti! Puedes acceder al video utilizando el siguiente enlace:
             </p>
 
-            <img src="../img/pruebacorreos/Group 71.png" alt="" style="display: block; width: 7.5rem; margin: 10px auto 0;">
+            <img src="@IMG_5" alt="" style="display: block; width: 7.5rem; margin: 10px auto 0;">
 
             <p style="font-family: 'MuseoSans300'; text-align: justify; font-size: 0.9rem;">
                 Si tienes alguna duda o necesitas asistencia técnica, no dudes en contactarnos a través del correo electrónico: formacion@esit.gob.sv o escribiendo al número de WhatsApp: 7490-0005. Estamos para brindarte la asistencia que necesites
@@ -99,8 +97,8 @@
 
     <div style="display: grid; max-width: 600px; height: 135px; margin: 0 auto; background-color: #304067;">
 
-        <img src="../img/pruebacorreos/Goes.png" alt="" style="display: block; margin: auto; width: 44.5%;">
-        <img src="../img/pruebacorreos/Social media.png" alt="" style="display: block; margin: 0px auto; width: 23.5%;">
+        <img src="@IMG_6" alt="" style="display: block; margin: auto; width: 44.5%;">
+        <img src="@IMG_7" alt="" style="display: block; margin: 0px auto; width: 23.5%;">
         
     </div>
 
