--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -325,3 +325,19 @@ label[class="error"] {
     padding: 5px 0;
     border-bottom: 2px solid #d9d9d9;
 }
+
+.swal2-popup.swal2-toast {
+    grid-template-columns: none;
+}
+
+body.swal2-toast-shown .swal2-container.swal2-top-end,
+body.swal2-toast-shown .swal2-container.swal2-top-right {
+    height: auto;
+}
+
+body.swal2-toast-shown .swal2-container {
+    box-sizing: border-box;
+    width: auto;
+    max-width: fit-content;
+    background-color: transparent;
+}
