--- a/public/assets/templates/PROTOCOLOS_DE_RED.html
+++ b/public/assets/templates/PROTOCOLOS_DE_RED.html
@@ -25,17 +25,15 @@
 </head>
 
 <body style="padding: 0; margin: 0; width: 100vw; background-color: #fff;">
-    
+
     <div style="font-family: sans-serif; color:#565B62; max-width: 598.4px; height: auto; margin: 0 auto;
         border: 1px solid #DBDBDB; border-top: none; border-bottom: none; background: linear-gradient(180deg, rgba(191, 201, 217, 0) 48.58%, #F2F2F2 100%);
         /*display: flex; justify-content: center;*/">
 
         <div style="position: relative; width: 100%;">
-
             <img src="../img/pruebacorreos/imagen.png" alt="" style="display: block; width: 100%; max-width: 598.4px; margin: auto;">
             <img src="../img/pruebacorreos/Horizontal Vector.png" alt="" style="position: absolute; top: 0; margin-top: 17%; width: 25%;">
             <img src="../img/pruebacorreos/Vertical Vector.png" alt="" style="position: absolute; top: 0; right: 0; height: 30%; margin: 13% 18% 0 0;">
-            
         </div>
 
         <div style="display: grid; padding: 0 60px 60px;">
@@ -97,13 +95,28 @@
 
     </div>
 
-    <div style="display: grid; max-width: 600px; height: 135px; margin: 0 auto; background-color: #304067;">
+    
+    <!-- <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; 
+        max-width: 600px; height: 110px; margin: 0 auto; background-color: #304067;">
+        <img src="../img/pruebacorreos/Goes.png" alt="" style="width: 44.5%; margin-bottom: 10px;">
+        <img src="../img/pruebacorreos/Social media.png" alt="" style="width: 23.5%;">
+    </div> -->
 
-        <img src="../img/pruebacorreos/Goes.png" alt="" style="display: block; margin: auto; width: 44.5%;">
-        <img src="../img/pruebacorreos/Social media.png" alt="" style="display: block; margin: 0px auto; width: 23.5%;">
-        
+    <div style="max-width: 600px; margin: 0 auto; background-color: #304067;">
+        <table width="100%" cellpadding="0" cellspacing="0" border="0" align="center">
+            <tr>
+                <td align="center" style="padding-top: 15px; padding-bottom: 10px;">
+                    <img src="../img/pruebacorreos/Goes.png" alt="" style="width: 44.5%; display: block;">
+                </td>
+            </tr>
+            <tr>
+                <td align="center" style="padding-bottom: 15px;">
+                    <img src="../img/pruebacorreos/Social media.png" alt="" style="width: 23.5%; display: block;">
+                </td>
+            </tr>
+        </table>
     </div>
-
+    
 </body>
 
 </html>
