--- a/public/assets/templates/prueba.html
+++ b/public/assets/templates/prueba.html
@@ -95,11 +95,19 @@
 
     </div>
 
-    <div style="display: grid; max-width: 600px; height: 135px; margin: 0 auto; background-color: #304067;">
-
-        <img src="@IMG_6" alt="" style="display: block; margin: auto; width: 44.5%;">
-        <img src="@IMG_7" alt="" style="display: block; margin: 0px auto; width: 23.5%;">
-        
+    <div style="max-width: 600px; margin: 0 auto; background-color: #304067;">
+        <table width="100%" cellpadding="0" cellspacing="0" border="0" align="center">
+            <tr>
+                <td align="center" style="padding-top: 15px; padding-bottom: 10px;">
+                    <img src="@IMG_6" alt="" style="width: 44.5%; display: block;">
+                </td>
+            </tr>
+            <tr>
+                <td align="center" style="padding-bottom: 15px;">
+                    <img src="@IMG_7" alt="" style="width: 23.5%; display: block;">
+                </td>
+            </tr>
+        </table>
     </div>
 
 </body>
