--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -48,7 +48,7 @@ form {
     width: 360px;
 }
 
-.form-forgot {
+.form-reset {
     width: 450px;
     padding: 1rem;
 }
@@ -64,7 +64,7 @@ form {
     font-size: 2.9rem;
 }
 
-.login-content .forgot-title {
+.login-content .reset-title {
     margin: auto;
     padding: 20px 0;
     color: #000;
@@ -76,9 +76,11 @@ form {
 .login-content .input-div {
     position: relative;
     display: grid;
-    grid-template-columns: 7% 93%;
     margin: 35px 0;
     padding: 5px 0;
+    left: 10px;
+    text-align: left;
+    grid-template-columns: 7% 93%;
     border-bottom: 2px solid #d9d9d9;
 }
 
@@ -206,6 +208,7 @@ label[class="error"] {
     position: relative;
     color: #ff0800;
     top: 60px;
+    left: 10px;
     /* left: -43px; */
 }
 
@@ -234,7 +237,7 @@ label[class="error"] {
 }
 
 @media screen and (max-width: 1125px) {
-    .form-forgot {
+    .form-reset {
         width: 360px
     }
 }
@@ -269,13 +272,13 @@ label[class="error"] {
     form {
         width: 360px;
     }
-    .form-forgot {
+    .form-reset {
         width: 450px
     }
 }
 
 @media screen and (max-width: 568px) {
-    .form-forgot {
+    .form-reset {
         width: 360px
     }
 }
@@ -284,7 +287,7 @@ label[class="error"] {
     form {
         width: 230px;
     }
-    .form-forgot {
+    .form-reset {
         width: 247px
     }
 }
@@ -305,10 +308,10 @@ label[class="error"] {
     align-items: center;
     text-align: center;
     padding:1.5rem;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
 }
 
-.form-content .forgot-title {
+.form-content .reset-title {
     margin: auto;
     padding: 20px 0;
     color: #000;
@@ -320,9 +323,10 @@ label[class="error"] {
 .form-content .input-div {
     position: relative;
     display: grid;
-    grid-template-columns: 7% 93%;
     margin: 35px 0;
     padding: 5px 0;
+    text-align: left;
+    grid-template-columns: 7% 93%;
     border-bottom: 2px solid #d9d9d9;
 }
 
