--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1187,12 +1187,14 @@ body.swal2-toast-shown .swal2-container {
     box-shadow: 0 0 5px rgba(0,0,0,0.3);  /* Sombra */
 }
 
-.paginate_button_2.previous.disabled,
-.paginate_button_2.next.disabled {
-    box-shadow: none !important;
-    border: none !important;
-    font-weight: 100 !important;
-    background: transparent !important;
+.dataTables_wrapper .dataTables_filter input,
+.dataTables_wrapper .dataTables_length select {
+    font-size: 17px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+    border-radius: 5px !important;
+    border: 2px solid #dfe0e0 !important;
 }
 
 /* Personalización del estilo de los botones de datable */
@@ -1210,6 +1212,14 @@ body.swal2-toast-shown .swal2-container {
     border: 1px solid transparent;
     border-radius: 10px;
     box-shadow: rgb(183, 183, 183) 0px 3px 11px 0px;
+}
+
+.paginate_button_2.previous.disabled,
+.paginate_button_2.next.disabled {
+    box-shadow: none !important;
+    border: none !important;
+    font-weight: 100 !important;
+    background: transparent !important;
 }
 
 .paginate_button_2.previous,
